# rndr

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  run.bat  setup.bat  setup.sh
.github/workflows/: ubuntu_build.yml  win_build.yml
Editor/assets/config/: config.ocio
Editor/assets/meshes/: 2cubes.fbx  3cubes.fbx  dragon.fbx  dragon.mtl  dragon_with_plane.mtl  plane_with_cube.mtl
Editor/assets/scenes/: 3DExample.yaml  PinkCube.yaml  Scene.yaml  Scene2.yaml  cube.yaml  scene2
Editor/assets/shaders/: ComputeShader main.glsl  ComputeShader.glsl  CubeShader copy.glsl  CubeShader.glsl  FlatColor.glsl  LineShader.glsl  MeshShader backup.glsl  MeshShader.glsl  Texture.glsl  globals.glsl  raygen.glsl  uniforms.glsl
Editor/assets/shaders/accumulation/: accumulate.glsl
Editor/assets/shaders/raytracing/: ComputeShader.glsl  closesthit.glsl  globals.glsl  intersection.glsl  miss.glsl  random.glsl  uniforms.glsl
Editor/src/: Editor.cpp  EditorLayer.cpp  EditorLayer.h  Sandbox3D.cpp  Sandbox3D.h
Editor/src/Panels/: AssetManagerPanel.cpp  AssetManagerPanel.h  ContentBrowserPanel.cpp  ContentBrowserPanel.h  MaterialPanel.cpp  MaterialPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  ViewPortpanel.cpp  ViewPortpanel.h
Rndr/: CMakeLists.txt
Rndr/dep/glad/: CMakeLists.txt
Rndr/dep/glad/include/glad/: glad.h
Rndr/dep/glad/src/: glad.c
Rndr/dep/imgui/: CMakeLists.txt
Rndr/dep/imgui-cmake/: CMakeLists.txt
Rndr/src/: Rndr.h  SandboxApp.cpp
Rndr/src/Platform/Linux/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Rndr/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Rndr/src/Platform/Windows/: WindowsInput.cpp  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
Rndr/src/Rndr/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Window.h
Rndr/src/Rndr/Assets/: Asset.cpp  Asset.h  AssetImporter.cpp  AssetImporter.h  AssetManager.cpp  AssetManager.h  AssetMetadata.h
Rndr/src/Rndr/Core/: Application.cpp  Application.h  Base.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.h  MouseButtonCodes.h  Timestep.h  UUID.cpp  UUID.h  Window.h
Rndr/src/Rndr/Debug/: Instrumentor.h
Rndr/src/Rndr/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Rndr/src/Rndr/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Rndr/src/Rndr/Math/: Math.cpp  Math.h
Rndr/src/Rndr/Platform/Linux/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Rndr/src/Rndr/Platform/OpenGL/: OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h
Rndr/src/Rndr/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Camera3D.cpp  Camera3D.h  ComputeShader.cpp  ComputeShader.h  EditorCamera.cpp  EditorCamera.h  FrameBuffer.cpp  FrameBuffer.h  FrameBufferLibrary.cpp  FrameBufferLibrary.h  GraphicsContext.h  Grid.h  IndexBuffer.h  LineRenderer.cpp  LineRenderer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PerspectiveCameraController.cpp  PerspectiveCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D copy.cpp  Renderer2D copy.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  (+12 more)
Rndr/src/Rndr/Renderer/opengl/: ComputeShader.cpp  IndexBuffer.cpp  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp
Rndr/src/Rndr/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h
Rndr/src/Rndr/Utils/: PlatformUtils.h
Sandbox/: CMakeLists.txt
Sandbox/assets/shaders/: Texture.glsl
Sandbox/src/: SandboxApp.cpp  SandboxApp.h
